--- a/.editorconfig
+++ b/.editorconfig
@@ -8,15 +8,12 @@ indent_style = space
 max_line_length = 80
 trim_trailing_whitespace = true
 
-# Lua
-[*.lua]
+[{*.lua,.busted,.luacheckrc,config.ld}]
 indent_size = 4
 max_line_length = 100
 
-# config.ld
-[config.ld]
+[*.xml]
 indent_size = 4
 
-# Makefile
 [Makefile]
 indent_style = tab
