Change container image in ci GA workflow jobs to match the organization

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     container:
-      image: viktorpopkov/dst-mod:debian
+      image: dstmodders/dst-mod:debian
     steps:
       - name: Check out
         uses: actions/checkout@v2
@@ -67,7 +67,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: viktorpopkov/dst-mod:debian
+      image: dstmodders/dst-mod:debian
     steps:
       - name: Check out
         uses: actions/checkout@v2
