--- a/.github/ISSUE_TEMPLATE/sdk_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/sdk_feature_request.yml
@@ -3,6 +3,7 @@ description: Suggest an idea for the SDK
 body:
   - type: checkboxes
     attributes:
+      label: Verify
       description: Please verify that you've followed these steps
       options:
         - label: I understand that if I ignore these instructions, my **issue may be closed without review**.
